# lru-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  release.txt
.github/workflows/: main.yml
benches/: benchmarks.rs
src/: estimate_size.rs  lazy.rs  lib.rs
tests/: test.rs
