[package]
name = "lru"
version = "0.16.1"
authors = ["Jerome Froelich <jeromefroelic@hotmail.com>"]
rust-version = "1.70.0"
categories = ["caching", "no-std"]
description = "A LRU cache implementation"
homepage = "https://github.com/jeromefroe/lru-rs"
repository = "https://github.com/jeromefroe/lru-rs.git"
documentation = "https://docs.rs/lru/"
readme = "README.md"
license = "MIT"
keywords = ["LRU", "cache"]

[features]
default = ["hashbrown"]
nightly = ["hashbrown", "hashbrown/nightly"]

[dependencies]
hashbrown = { version = "0.15.2", optional = true }

[dev-dependencies]
rand = "0.8.5"
scoped_threadpool = "0.1.*"
stats_alloc = "0.1.*"

[[bench]]
name = "benchmarks"
